filling in information

--- a/html/coinledger.html
+++ b/html/coinledger.html
@@ -37,67 +37,21 @@
             <img class="responsive" src="../images/coinledger/1.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>the app : home</h4>
+            <h4>home</h4>
             <hr>
-            <p>The app is designed for the job seeker needing a low friction, discrete way of showing interest in new opportunities.
-            Upon sign up the user enters the url of their Linkedin profile, which allows the app to scan keywords from their profile to pre-qualify them for posted jobs. </p>
+            <p>The logged-out home page has simple sign up mechanism (email and password only) at the top of the page. </p>
+            <p>Current bitcoin prices add value to a user before they sign up.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/2.png">
+            <img class="responsive" src="../images/coinledger/10.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>preferences</h4>
+            <h4>post sign up</h4>
             <hr>
-            <p>The seeker sets their preferences to filter their mandatory requirements like team size, commute time, company type and perks.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/3.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>posted job</h4>
-            <hr>
-            <p>The user can then browse positions that are a match for them. A short, tidy overview area keeps descriptions succinct. </p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/4.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>swiping up </h4>
-            <hr>
-            <p>Swiping up gives more details of the team and office location. </p>
-            <p>Instead of responsibilites, projects are listed to give the seeker an exact idea of what they would be doing.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/5.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>company info &amp; perks</h4>
-            <hr>
-           <p>Financial information and leadership links allow the user to browse deeper if they'd like to know more about the company.</p>
-           <p>Perks include the must-haves already selected by the seeker in preferences.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/6.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>the site</h4>
-            <hr>
-            <p>Recruiters do much of the work at their desks. Therefore, the MVP would focus only on a desktop site where the recruiter would create their postings and manage communication with interested candidates.</p>
+            <p>After signing up, the user is asked to connect their bitcoin accounts.</p>
           </div>
         </div>
 
@@ -106,9 +60,65 @@
             <img class="responsive" src="../images/coinledger/7.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>the site : add job</h4>
+            <h4>accounts</h4>
             <hr>
-            <p>The flow for adding a posting to the system.</p>
+            <p>The connected accounts then populate the balance information.</p>
+          </div>
+        </div>
+
+        <div>
+          <div class="slide-right col-sm-7 col-sm-push-5">
+            <img class="responsive" src="../images/coinledger/2.png">
+          </div>
+          <div class="slide-left col-sm-5 col-sm-pull-7">
+            <h4>charts</h4>
+            <hr>
+            <p>In charts, the user can see data visualizations of their portfolio value, gains and losses and tax information.</p>
+          </div>
+        </div>
+
+        <div>
+          <div class="slide-right col-sm-7 col-sm-push-5">
+            <img class="responsive" src="../images/coinledger/3.png">
+          </div>
+          <div class="slide-left col-sm-5 col-sm-pull-7">
+            <h4>bitcoin</h4>
+            <hr>
+            <p>To see currency trading history, bitcoin prices and the user's break even price, the user drops down the bitcoin panel. </p>
+          </div>
+        </div>
+
+        <div>
+          <div class="slide-right col-sm-7 col-sm-push-5">
+            <img class="responsive" src="../images/coinledger/4.png">
+          </div>
+          <div class="slide-left col-sm-5 col-sm-pull-7">
+            <h4>spending charts</h4>
+            <hr>
+            <p>Pie charts show the user's spending habits and division of holdings within each company.</p>
+          </div>
+        </div>
+
+        <div>
+          <div class="slide-right col-sm-7 col-sm-push-5">
+            <img class="responsive" src="../images/coinledger/5.png">
+          </div>
+          <div class="slide-left col-sm-5 col-sm-pull-7">
+            <h4>ledger</h4>
+            <hr>
+           <p>In the ledger, the user can see their transactions, fees and balances.</p>
+           <p>Transaction types are marked with color labels and users are able to write notes on each.</p>
+          </div>
+        </div>
+
+        <div>
+          <div class="slide-right col-sm-7 col-sm-push-5">
+            <img class="responsive" src="../images/coinledger/6.png">
+          </div>
+          <div class="slide-left col-sm-5 col-sm-pull-7">
+            <h4>taxes</h4>
+            <hr>
+            <p>The tax area shows all taxable transactions and 3 methodology choices for tax reporting.</p>
           </div>
         </div>
 
@@ -117,9 +127,9 @@
             <img class="responsive" src="../images/coinledger/8.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>step 2, add projects</h4>
+            <h4>emails</h4>
             <hr>
-            <p>The flow for adding a posting to the system.</p>
+            <p>Emails were designed to coordinate the brand established by the website. Cheeky welcome graphics illustrated topics.</p>
           </div>
         </div>
 
@@ -128,9 +138,9 @@
             <img class="responsive" src="../images/coinledger/9.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>step 3, company info</h4>
+            <h4>emails</h4>
             <hr>
-            <p>The flow for adding a posting to the system.</p>
+            <p>Emails were designed to coordinate the brand established by the website. Cheeky welcome graphics illustrated topics.</p>
           </div>
         </div>
 
@@ -150,7 +160,7 @@
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
       <p>They’re people working in tech and in finance. Some of them mined bitcoins the currency’s infancy and watched their worth skyrocket. They are interested in strengthening the currency and see it as an investment vehicle. For security they often have their bitcoins spread across many different companies and need to see an aggregated view of their worth.</p>
-      <p>The structure of the currency is such that there are often multiple companies holding user’s bitcoins. There is also a great deal of volatility with the currency so being able to track its trading price is important.</p>
+      <p>There is also a great deal of volatility with bitcoin's value so being able to track its trading price is important. Users are pioneers in the new currency, bravely wading through price uncertainty and complicated taxes.</p>
     </div>
   </div>
 </div>
@@ -163,12 +173,12 @@
     </div>
   </div>
   <div class="row project-items match-height distribute">
-    <div class="project-item col-sm-3">
+    <div class="project-item col-sm-4">
       <div class="project-item-top"><img class="responsive outline" src="../images/coinledger/2.png"></div>
       <h5>Site</h5>
       <p>Allows investors to track their coins, follow the market and calculate their taxes.</p>
     </div>
-    <div class="project-item col-sm-3">
+    <div class="project-item col-sm-4">
       <div class="project-item-top"><img class="responsive outline" src="../images/coinledger/8.png"></div>
       <h5>Email</h5>
       <p>Coordinating emails introduce users to features</p>
@@ -180,8 +190,8 @@
   <div class="row">
     <div class="body-left col-sm-4">
       <div class="body-title">
-        <h3>What was</h3>
-        <h4>the solution?</h4>
+        <h3>New design</h3>
+        <h4>solutions</h4>
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
