--- a/html/bnbledger.html
+++ b/html/bnbledger.html
@@ -23,8 +23,8 @@
 <div class="photo-container clearfix">
   <div class="subphoto subphoto-bnbledger"></div>
   <div class="whitecard view-slides clickable">
-    <h4>an app to quietly help</h4>
-    <h5>passive job seekers</h5>
+    <h4>an analytical tool for</h4>
+    <h5>airbnb power hosts</h5>
     <h6>view slides</h6>
   </div>
   <div class="eg-modal">
@@ -34,13 +34,13 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive center" src="http://eringallup.info/name/logo.png">
+            <img class="responsive center" src="../images/bnbledger/logo.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>the project</h4>
             <hr>
-            <p>This project was a sketch to test out the concept of a &lsquo;Tinder for jobs&rsquo;. The first task was to decide on a name and pull together a logo, which would give us a starting point for the design.</p>
-            <p>The name and logo are designed to evoke trust and hint at exclusivity.</p>
+            <p>This project was a sketch to test out the concept of an analytics tool for serious Airbnb hosts. The first task was to  pull together a logo, which would give us a starting point for the design.</p>
+            <p>The logo uses a bar chart to create a house shape.</p>
           </div>
         </div>
 
@@ -255,7 +255,7 @@
     <div class="body-left col-sm-4">
       <div class="body-title">
         <h3>Who are</h3>
-        <h4>passive job seekers?</h4>
+        <h4>airbnb power hosts?</h4>
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
@@ -268,24 +268,19 @@
   <div class="row">
     <div class="col-sm-12">
       <h4 class="project-title">The Project</h4>
-      <p class="lead">Create a system that reduces prospecting friction for passive job seekers.</p>
+      <p class="lead">Design an Airbnb host analytics tool.</p>
     </div>
   </div>
   <div class="row project-items match-height distribute">
     <div class="project-item col-sm-3">
-      <div class="project-item-top" style="padding-top: 30px;"><img class="responsive" src="../images/rarelead-logo.png"></div>
+      <div class="project-item-top" style="padding-top: 30px;"><img class="responsive" src="../images/bnbledger-logo.png"></div>
       <h5>Logo</h5>
       <p>Starts visual design and branding</p>
     </div>
     <div class="project-item col-sm-3">
-      <div class="project-item-top"><img class="responsive outline" src="http://eringallup.info/name/screens/4.png"></div>
-      <h5>App</h5>
-      <p>Allows seekers to qualify themselves and show interest</p>
-    </div>
-    <div class="project-item col-sm-3">
       <div class="project-item-top"><img class="responsive outline" src="http://eringallup.info/name/7-1.png"></div>
       <h5>Site</h5>
-      <p>Allows recruiters to post jobs and contact prospects</p>
+      <p>Allows hosts to analyze their properties' profit and loss</p>
     </div>
     <div class="project-item col-sm-3">
       <div class="project-item-top"><img class="responsive outline" src="http://eringallup.info/name/16-1.png"></div>
