--- a/html/quantcast.html
+++ b/html/quantcast.html
@@ -23,8 +23,8 @@
 <div class="photo-container clearfix">
   <div class="subphoto subphoto-quantcast"></div>
   <div class="whitecard view-slides clickable">
-    <h4>an app to quietly help</h4>
-    <h5>passive job seekers</h5>
+    <h4>reporting tools for</h4>
+    <h5>web publishers</h5>
     <h6>view slides</h6>
   </div>
   <div class="eg-modal">
@@ -34,214 +34,89 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive center" src="http://eringallup.info/name/logo.png">
+            <img class="responsive" src="../images/quantcast/1.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>the project</h4>
+            <h4>website : home</h4>
             <hr>
-            <p>This project was a sketch to test out the concept of a &lsquo;Tinder for jobs&rsquo;. The first task was to decide on a name and pull together a logo, which would give us a starting point for the design.</p>
-            <p>The name and logo are designed to evoke trust and hint at exclusivity.</p>
+            <p>Designed to quickly get web publishers started, the home page featured sparse navigation direct messaging.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/screens/1.png">
+            <img class="responsive" src="../images/quantcast/2.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>the app : home</h4>
+            <h4>loggin in</h4>
             <hr>
-            <p>The app is designed for the job seeker needing a low friction, discrete way of showing interest in new opportunities.
-            Upon sign up the user enters the url of their Linkedin profile, which allows the app to scan keywords from their profile to pre-qualify them for posted jobs. </p>
+            <p>Registered publishers can log into their dashboard on any page.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/screens/3.png">
+            <img class="responsive" src="../images/quantcast/8.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>preferences</h4>
+            <h4>dashboard</h4>
             <hr>
-            <p>The seeker sets their preferences to filter their mandatory requirements like team size, commute time, company type and perks.</p>
+            <p>Once logged in, publishers are given an overview of their metrics, their favorite's metrics and messages about new useful features in their dashboard.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/screens/4.png">
+            <img class="responsive" src="../images/quantcast/9.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>posted job</h4>
+            <h4>profiles</h4>
             <hr>
-            <p>The user can then browse positions that are a match for them. A short, tidy overview area keeps descriptions succinct. </p>
+            <p>One main use of Quantcast for a publisher is analyzing competitors' data. Publishers find competitors in the search box on the dashboard and can save them to their favorites.  </p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/screens/5.png">
+            <img class="responsive" src="../images/quantcast/10.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>swiping up </h4>
+            <h4>favorites</h4>
             <hr>
-            <p>Swiping up gives more details of the team and office location. </p>
-            <p>Instead of responsibilites, projects are listed to give the seeker an exact idea of what they would be doing.</p>
+            <p>In favorites, a publisher can categorize saved profiles to see graphs of how they compare to their own. The publisher can take the provided graphs and use it to back up proposals to ad networks.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/screens/6.png">
+            <img class="responsive" src="../images/quantcast/12.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>company info &amp; perks</h4>
+            <h4>measure</h4>
             <hr>
-           <p>Financial information and leadership links allow the user to browse deeper if they'd like to know more about the company.</p>
-           <p>Perks include the must-haves already selected by the seeker in preferences.</p>
+            <p>Deep metrics on their websites are provided in the measure section. A publisher can export each 'metric card' to their recurring reports to ad networks.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/1-1.png">
+            <img class="responsive" src="../images/quantcast/3.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>the site</h4>
+            <h4>analytics</h4>
             <hr>
-            <p>Recruiters do much of the work at their desks. Therefore, the MVP would focus only on a desktop site where the recruiter would create their postings and manage communication with interested candidates.</p>
+            <p>I designed data visualizations to help users understand key concepts like indexing. In this example, a user could use the metrics as is...</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/2-1.png">
+            <img class="responsive" src="../images/quantcast/4.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>the site : add job</h4>
+            <h4>analytics</h4>
             <hr>
-            <p>The flow for adding a posting to the system.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/3-1.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>step 2, add projects</h4>
-            <hr>
-            <p>The flow for adding a posting to the system.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/4-1.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>step 3, company info</h4>
-            <hr>
-            <p>The flow for adding a posting to the system.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/5-1.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>step 4, perks</h4>
-            <hr>
-            <p>The flow for adding a posting to the system.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/6-1.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>step 5, keywords</h4>
-            <hr>
-            <p>The flow for adding a posting to the system.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/7-1.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>success</h4>
-            <hr>
-            <p>Successfully posted jobs populate the home page.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/8-1.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>manage postings</h4>
-            <hr>
-            <p>The recruiter is notified when users have expressed interest in their job through clicking in the app.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/9-1.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>new matches</h4>
-            <hr>
-            <p>New matches are highlighted, which allow the recruiter to initiate a text conversation...</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/10-1.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>new matches : payment</h4>
-            <hr>
-            <p>Which they must pay to do.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/11-1.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>texting a candidate</h4>
-            <hr>
-            <p>Upon payment, the recruiter can text candidates from the desktop site.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/12-1.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>messages</h4>
-            <hr>
-            <p>The recruiter can manage all of their conversations for a particular job.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/16-1.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>landing page</h4>
-            <hr>
-            <p>A coordinating landing page would allow for sign ups while the product was built.</p>
+            <p>... or dropdown the details to understand how the data is calculated.</p>
           </div>
         </div>
 
@@ -255,42 +130,12 @@
     <div class="body-left col-sm-4">
       <div class="body-title">
         <h3>Who are</h3>
-        <h4>passive job seekers?</h4>
+        <h4>web publishers?</h4>
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>The passive job seeker is a skilled employee who is starting to feel that the next job is on the horizon. They are busy with their current job and do not have time to do a search, but would be open to new opportunities. They only want to see jobs that they are qualified for and ones that they'd leave their current job for. They are frequently contacted by recruiters - many times at inopportune times and for jobs they are not interested in. </p>
-    </div>
-  </div>
-</div>
-
-<div class="project container">
-  <div class="row">
-    <div class="col-sm-12">
-      <h4 class="project-title">The Project</h4>
-      <p class="lead">Create a system that reduces prospecting friction for passive job seekers.</p>
-    </div>
-  </div>
-  <div class="row project-items match-height distribute">
-    <div class="project-item col-sm-3">
-      <div class="project-item-top" style="padding-top: 30px;"><img class="responsive" src="../images/rarelead-logo.png"></div>
-      <h5>Logo</h5>
-      <p>Starts visual design and branding</p>
-    </div>
-    <div class="project-item col-sm-3">
-      <div class="project-item-top"><img class="responsive outline" src="http://eringallup.info/name/screens/4.png"></div>
-      <h5>App</h5>
-      <p>Allows seekers to qualify themselves and show interest</p>
-    </div>
-    <div class="project-item col-sm-3">
-      <div class="project-item-top"><img class="responsive outline" src="http://eringallup.info/name/7-1.png"></div>
-      <h5>Site</h5>
-      <p>Allows recruiters to post jobs and contact prospects</p>
-    </div>
-    <div class="project-item col-sm-3">
-      <div class="project-item-top"><img class="responsive outline" src="http://eringallup.info/name/16-1.png"></div>
-      <h5>Lander</h5>
-      <p>Tests user interest while site is created</p>
+      <p>Web publishers are blogs, news and information websites that make their revenue from running ads. Their day to day focus is on providing fresh engaging content and increasing their readership. </p>
+      <p>Because their money is made from ads, they must provide accurate, impartial metrics of their readership to ad serving companies (ad networks) and prove they are a fit. </p>
     </div>
   </div>
 </div>
@@ -299,14 +144,71 @@
   <div class="row">
     <div class="body-left col-sm-4">
       <div class="body-title">
-        <h3>What was</h3>
-        <h4>the solution?</h4>
+        <h3>About</h3>
+        <h4>the company</h4>
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>To soften the outreach process for both the job seeker and the recruiter, simplicity and privacy had to be designed into the product. The app would allow a candidate to share their linked in profile page to be automatically qualified. They would browse through jobs with direct, easy to read details and show interest by clicking the checkmark button. They would be contacted only through text and only if they first showed interest.</p>
+      <p>Quantcast is a company that provides free analytics to web publishers. Similar to Google Analytics, a publisher inserts code onto their web pages that allows visits to be tracked. They are then provided with analytic reports which are used as proof in reports to ad networks.</p>
+      <p>I worked at Quantcast for nearly two years, getting to know redesigning their analytic product and creating data visualizations.</p>
+    </div>
+  </div>
+</div>
 
-      <p>The recruiter would have a streamlined process of adding jobs to the system through an easy to use website that guides them into creating an appealing posting with succinct details. They would no longer need to contact potential candidates out of the blue as the system would show only people with real interest.</p>
+<div class="project container">
+  <div class="row">
+    <div class="col-sm-12">
+      <h4 class="project-title">Projects</h4>
+      <p class="lead">Make an analytic product that is useful for web publishers.</p>
+    </div>
+  </div>
+  <div class="row project-items match-height distribute">
+    <div class="project-item col-sm-3">
+      <div class="project-item-top"><img class="responsive outline" src="../images/quantcast/1.png"></div>
+      <h5>Redesign</h5>
+      <p>Simple navigation and clear messaging help publishers understand the offerings.</p>
+    </div>
+    <div class="project-item col-sm-3">
+      <div class="project-item-top"><img class="responsive outline" src="../images/quantcast/9.png"></div>
+      <h5>Dashboard</h5>
+      <p>A straightforward product helps publishers run their businesses.</p>
+    </div>
+    <div class="project-item col-sm-3">
+      <div class="project-item-top"><img class="responsive outline" src="../images/quantcast/3.png"></div>
+      <h5>Analytics</h5>
+      <p>Data visualizations help publishers understand their user base.</p>
+    </div>
+    </div>
+</div>
+
+<div class="body-container container">
+  <div class="row">
+    <div class="body-left col-sm-4">
+      <div class="body-title">
+        <h3>old design</h3>
+        <h4>problems</h4>
+      </div>
+    </div>
+    <div class="body-right col-sm-7 col-sm-offset-1">
+      <p>The design before I came to Quantcast was years old and cobbled together. The site had a large unwieldy navigation that changed from page to page and required a lot of reading. The home page had a lot of reading as well and included buzzy words that were hard to understand. The product had a cluttered feel with lots of outlines and tiny text. The entire site required the user to do a lot of reading.</p>
+      <p>Beyond the design, there was a lack of understanding of who the product served and how it was being used.</p>
+      <p>Because the site was created over the course of years, it contained a great deal of legacy code that made small changes very difficult. A sweeping site design could not happen without massive interruptions.</p>
+    </div>
+  </div>
+</div>
+
+<div class="body-container container">
+  <div class="row">
+    <div class="body-left col-sm-4">
+      <div class="body-title">
+        <h3>new design</h3>
+        <h4>solutions</h4>
+      </div>
+    </div>
+    <div class="body-right col-sm-7 col-sm-offset-1">
+      <p>To ease the product into a redesign, I started by simplifying the navigation and created a wrapper to replace the dated menus. I replaced the wordy home page with one that was direct and easy to read. After this launched we began the product redesign process.</p>
+      <p>It was imperative to truly understand who was using the site and how it was being used. I partnered with a user researcher to tackle this and we did in depth interviews with dozens of the top publishers using Quantcast's product. It was through these interviews that we learned that publishers were most interested in using the site for metrics to give to their ad networks, to compare themselves to other sites like them, and to promote themselves to lead to new opportunities.</p>
+      <p>With this information, I redesigned the measure tool to give the publishers easy access to their metrics, to save profiles to compare to their own and to make their own profile show their data in the best possible light.</p>
     </div>
   </div>
 </div>
@@ -320,26 +222,33 @@
   <div class="row details-items match-height distribute">
     <div class="details-item col-sm-3">
       <h5>Project Type</h5>
-      <p>proof of concept</p>
+      <p>redesign</p>
     </div>
     <div class="details-item col-sm-3">
       <h5>Time frame</h5>
-      <p>2 weeks</p>
+      <ul class="list-unstyled">
+        <li>redesign: 4 mo.</li>
+        <li>dashboard: 4 mo.</li>
+        <li>analytics: 1 mo. each</li>
+      </ul>
     </div>
     <div class="details-item col-sm-3">
       <h5>Team</h5>
       <ul class="list-unstyled">
-        <li>product manager</li>
-        <li>me</li>
+        <li>product managers</li>
+        <li>engineering team</li>
+        <li>design team</li>
       </ul>
     </div>
     <div class="details-item col-sm-3">
       <h5>Outcome</h5>
-      <p>prototypes</p>
+      <ul class="list-unstyled">
+        <li>live site</li>
+        <li>prototypes</li>
+      </ul>
     </div>
   </div>
 </div>
-
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
