--- a/html/rarelead.html
+++ b/html/rarelead.html
@@ -95,7 +95,7 @@
             <img class="responsive" src="../images/rarelead/screens/6.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>company info &amp; perks</h4>
+            <h4>company info, perks</h4>
             <hr>
            <p>Financial information and leadership links allow the user to browse deeper if they'd like to know more about the company.</p>
            <p>Perks include the must-haves already selected by the seeker in preferences.</p>
