coin ledger edits

--- a/html/creativelive.html
+++ b/html/creativelive.html
@@ -258,7 +258,7 @@
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>With the redesign, I started by simplifying the navigation to allow for less user reading. I incorporated imagery of actual productions into the home page that described what Creative Live did, reinforcing the text. Because the majority of Creative Live's audience are females 25-40, I designed the pages to appeal to them, including selecting a complementary font that had a smooth handwriting feel.</p>
+      <p>With the redesign, I started by simplifying the navigation to allow for less user reading. I incorporated imagery of actual productions into the home page that described what Creative Live did, reinforcing the text. Because the majority of Creative Live's audience are females 25-40, I designed the pages to appeal to them, including selecting a complementary font that had a friendly handwriting feel.</p>
       <img class="responsive" style="margin:20px 0 60px 0; border: 1px solid #cfcfcf;" src="../images/creativelive/2.png">
 
       <p>Instead of having one corporate color, I assigned colors to each vertical to allow the user to quickly remember the vertical they were most interested in. I chose colors that worked well together, were readable, and followed their general association. Together they had a &lsquo;tv bar&rsquo; effect.</p>
