--- a/html/coinledger.html
+++ b/html/coinledger.html
@@ -39,12 +39,11 @@
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>home</h4>
             <hr>
-            <p>The logged-out home page has simple sign up mechanism (email and password only) at the top of the page. </p>
-            <p>Current bitcoin prices add value to a user before they sign up.</p>
+            <p>Designed to instill trust and appeal to bitcoin investors, the home page is simple, clean and straightforward.</p>
           </div>
         </div>
 
-        <div>
+        <!--<div>
           <div class="slide-right col-sm-7 col-sm-push-5">
             <img class="responsive" src="../images/coinledger/10.png">
           </div>
@@ -64,7 +63,7 @@
             <hr>
             <p>The connected accounts then populate the balance information.</p>
           </div>
-        </div>
+        </div>-->
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
@@ -73,7 +72,7 @@
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>charts</h4>
             <hr>
-            <p>In charts, the user can see data visualizations of their portfolio value, gains and losses and tax information.</p>
+            <p>Data visualizations allowed users to understand their portfolio value, gains and losses and taxes owed.</p>
           </div>
         </div>
 
@@ -82,13 +81,13 @@
             <img class="responsive" src="../images/coinledger/3.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>bitcoin</h4>
+            <h4>bitcoin monitor</h4>
             <hr>
-            <p>To see currency trading history, bitcoin prices and the user's break even price, the user drops down the bitcoin panel. </p>
+            <p>Currency trading history, bitcoin prices and the user's break even price are easily accessible in the bitcoin dropdown panel. </p>
           </div>
         </div>
 
-        <div>
+        <!--<div>
           <div class="slide-right col-sm-7 col-sm-push-5">
             <img class="responsive" src="../images/coinledger/4.png">
           </div>
@@ -97,7 +96,7 @@
             <hr>
             <p>Pie charts show the user's spending habits and division of holdings within each company.</p>
           </div>
-        </div>
+        </div>-->
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
@@ -107,7 +106,7 @@
             <h4>ledger</h4>
             <hr>
            <p>In the ledger, the user can see their transactions, fees and balances.</p>
-           <p>Transaction types are marked with color labels and users are able to write notes on each.</p>
+           <p>Transaction types are marked with color labels and users are able to annotate them.</p>
           </div>
         </div>
 
@@ -118,18 +117,7 @@
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>taxes</h4>
             <hr>
-            <p>The tax area shows all taxable transactions and 3 methodology choices for tax reporting.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/8.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>emails</h4>
-            <hr>
-            <p>Emails were designed to coordinate the brand established by the website. Cheeky welcome graphics illustrated topics.</p>
+            <p>The tax area is designed to let the user choose the reporting methodology best for them.</p>
           </div>
         </div>
 
@@ -159,8 +147,8 @@
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>They’re people working in tech and in finance. Some of them mined bitcoins the currency’s infancy and watched their worth skyrocket. They are interested in strengthening the currency and see it as an investment vehicle. For security they often have their bitcoins spread across many different companies and need to see an aggregated view of their worth.</p>
-      <p>There is also a great deal of volatility with bitcoin's value so being able to track its trading price is important. Users are pioneers in the new currency, bravely wading through price uncertainty and complicated taxes.</p>
+      <p>They’re people working in tech and in finance. Some of them mined bitcoins the currency’s infancy and watched their value skyrocket. They are interested in strengthening the currency and see it as an investment vehicle. For security they often have their bitcoins spread across many different companies and need to see an aggregated view of their worth.</p>
+      <p>They closely monitor bitcoin's volatility and often check its trading price. They are pioneers in the new currency, bravely wading through market uncertainty and complicated taxes.</p>
     </div>
   </div>
 </div>
@@ -179,8 +167,8 @@
       <p>Allows investors to track their coins, follow the market and calculate their taxes.</p>
     </div>
     <div class="project-item col-sm-4">
-      <div class="project-item-top"><img class="responsive outline" src="../images/coinledger/8.png"></div>
-      <h5>Email</h5>
+      <div class="project-item-top"><img class="responsive outline" src="../images/coinledger/9.png"></div>
+      <h5>Emails</h5>
       <p>Coordinating emails introduce users to features</p>
     </div>
   </div>
@@ -190,14 +178,40 @@
   <div class="row">
     <div class="body-left col-sm-4">
       <div class="body-title">
-        <h3>New design</h3>
-        <h4>solutions</h4>
+        <h3>Old design</h3>
+        <h4>problems</h4>
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>To soften the outreach process for both the job seeker and the recruiter, simplicity and privacy had to be designed into the product. The app would allow a candidate to share their linked in profile page to be automatically qualified. They would browse through jobs with direct, easy to read details and show interest by clicking the checkmark button. They would be contacted only through text and only if they first showed interest.</p>
+      <p>Bitcoin investors using the old site reported that they did not have a clear separation between their portfolio's value and bitcoin's price value. They weren't sure if the site was safe and could be trusted with having access to their sensistive financial information.</p>
+    </div>
+  </div>
+</div>
 
-      <p>The recruiter would have a streamlined process of adding jobs to the system through an easy to use website that guides them into creating an appealing posting with succinct details. They would no longer need to contact potential candidates out of the blue as the system would show only people with real interest.</p>
+<div class="body-container container">
+  <div class="row">
+    <div class="body-left col-sm-4">
+      <div class="body-title">
+        <h3>New design</h3>
+        <h4>resolutions</h4>
+      </div>
+    </div>
+    <div class="body-right col-sm-7 col-sm-offset-1">
+      <p>Not being a bitcoin investor myself, I needed to do some research to understand their needs. I first researched how currencies worked so I could understand bitcoin's backstory. I then interviewed an investor and learned that it was difficult to mentally process bitcoin's currency conversion as there are tiny fractions involved ($1 roughly equals 0.0043 bitcoins). It was important to separate the user's portfolio value from bitcoin's trading price. To do this I designed a strong color bar at the top of the product to make the clear separation.</p>
+      <img class="responsive" style="margin:20px 0 60px 0; border: 1px solid #cfcfcf;" src="../images/coinledger/2.png">
+
+      <p>Bitcoin's price can vary dramatically minute to minute, and investors trading on this fact need to monitor price fluctuations and see trends in where they bought and sold. I designed a dropdown area where investors could access this information.</p>
+      <img class="responsive" style="margin-bottom:60px; border: 1px solid #cfcfcf;" src="../images/coinledger/3.png">
+
+      <p>For the ledger, I interviewed an investor to determine the actions and categories that would be important to them. I designed a color coding system to tag transactions for ease of browsing.</p>
+      <img class="responsive" style="margin-bottom:60px; border: 1px solid #cfcfcf;" src="../images/coinledger/5.png">
+
+      <p>Paying taxes on bitcoin investment is a major headache for investors, so making the tax page look and feel simple was very important.</p>
+      <img class="responsive" style="margin-bottom:60px; border: 1px solid #cfcfcf;" src="../images/coinledger/6.png">
+
+      <p>Overall, it was important to make a design that felt simple, straightforward and trustworthy for investors. We kept that in mind in the design of the home page.</p>
+      <img class="responsive" style="margin-bottom:60px; border: 1px solid #cfcfcf;" src="../images/coinledger/1.png">
+
     </div>
   </div>
 </div>
@@ -226,7 +240,7 @@
     </div>
     <div class="details-item col-sm-3">
       <h5>Outcome</h5>
-      <p>live site</p>
+      <p><a href="http://www.coinledger.io" target="blank">live site</a></p>
     </div>
   </div>
 </div>
