edits to coin ledger

--- a/html/coinledger.html
+++ b/html/coinledger.html
@@ -209,7 +209,7 @@
       <p>Paying taxes on bitcoin investment is a major headache for investors, so making the tax page look and feel simple was very important.</p>
       <img class="responsive" style="margin-bottom:60px; border: 1px solid #cfcfcf;" src="../images/coinledger/6.png">
 
-      <p>Overall, it was important to make a design that felt simple, straightforward and trustworthy for investors. We kept that in mind in the design of the home page.</p>
+      <p>Overall, it was important to make a design that felt simple, straightforward and trustworthy for investors. I kept that in mind in the design of the home page.</p>
       <img class="responsive" style="margin-bottom:60px; border: 1px solid #cfcfcf;" src="../images/coinledger/1.png">
 
     </div>
