edits to quantcast

--- a/html/quantcast.html
+++ b/html/quantcast.html
@@ -37,53 +37,9 @@
             <img class="responsive" src="../images/quantcast/1.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>website : home</h4>
+            <h4>home</h4>
             <hr>
-            <p>Designed to quickly get web publishers started, the home page featured sparse navigation direct messaging.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/quantcast/2.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>loggin in</h4>
-            <hr>
-            <p>Registered publishers can log into their dashboard on any page.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/quantcast/8.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>dashboard</h4>
-            <hr>
-            <p>Once logged in, publishers are given an overview of their metrics, their favorites' metrics and messages about new useful features in their dashboard.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/quantcast/9.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>profiles</h4>
-            <hr>
-            <p>One main use of Quantcast for a publisher is analyzing competitors' data. Publishers find competitors in the search box on the dashboard and can save them to their favorites.  </p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/quantcast/10.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>favorites</h4>
-            <hr>
-            <p>In favorites, a publisher can categorize saved profiles to see graphs of how they compare to their own. The publisher can take the provided graphs and use it to back up proposals to ad networks.</p>
+            <p>Designed to quickly get web publishers started, the home page featured easy navigation direct messaging.</p>
           </div>
         </div>
 
@@ -94,7 +50,18 @@
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>measure</h4>
             <hr>
-            <p>Deep metrics on their websites are provided in the measure section. A publisher can export each 'metric card' and use them in their reports to ad networks.</p>
+            <p>Publisher's metrics are provided in a dashboard format, which can be exported for use in their reports to advertisers.</p>
+          </div>
+        </div>
+
+        <div>
+          <div class="slide-right col-sm-7 col-sm-push-5">
+            <img class="responsive" src="../images/quantcast/10.png">
+          </div>
+          <div class="slide-left col-sm-5 col-sm-pull-7">
+            <h4>compare</h4>
+            <hr>
+            <p>One main use of Quantcast for a publisher is competitive analysis. Publishers find competitors in the search box on the dashboard, can save them to their favorites and create comparison charts.  </p>
           </div>
         </div>
 
@@ -105,20 +72,11 @@
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>analytics</h4>
             <hr>
-            <p>Data visualizations were designed to help users understand key concepts like indexing. In this example, a user could view the metrics as is...</p>
+            <p>Data visualizations were designed to help publishers understand key concepts like indexing. </p>
           </div>
         </div>
 
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/quantcast/4.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>analytics</h4>
-            <hr>
-            <p>... or dropdown the details to understand how the data is calculated.</p>
-          </div>
-        </div>
+
 
       </div>
     </div>
@@ -134,8 +92,7 @@
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>Web publishers are blogs, news and product websites that make their revenue from running ads. Their day to day focus is on providing fresh engaging content and increasing their readership. </p>
-      <p>Because their money is made from ads, they must provide accurate, impartial metrics of their readership to ad serving companies (ad networks) and prove they are a fit. </p>
+      <p>Web publishers are blogs, news and product websites whose revenue comes from running ads. Their day to day focus is on providing fresh engaging content and increasing their readership. They make money by selling advertising space either directly to an advertiser, through partnering with ad networks or programatically through ad exchanges. </p>
     </div>
   </div>
 </div>
@@ -149,8 +106,8 @@
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>Quantcast is a company that provides free analytics to web publishers. Similar to Google Analytics, a publisher inserts code onto their web pages that allows visits to be tracked. They are then provided with analytic reports which are used as proof in reports to ad networks.</p>
-      <p>I worked at Quantcast for nearly two years, getting to know web publishers and redesigning Quantcast's analytic product to best suit their needs.</p>
+      <p>Quantcast is a company that provides free analytics to web publishers. Similar to Google Analytics, a publisher inserts code onto their web pages that allows visits to be tracked. They are then provided with analytic reports of demographic and psychographic data which are used to describe their audience to potential partners or advertisers.</p>
+      <p>I worked at Quantcast for nearly two years, getting to know web publishers and redesigning Quantcast's measure product to best suit their needs.</p>
     </div>
   </div>
 </div>
@@ -170,11 +127,11 @@
     </div>
     <div class="project-item col-sm-3">
       <div class="project-item-top"><img class="responsive outline" src="../images/quantcast/9.png"></div>
-      <h5>Dashboard</h5>
-      <p>A straightforward product helps publishers run their businesses.</p>
+      <h5>Tools</h5>
+      <p>The product's design was tailored to the publisher's needs.</p>
     </div>
     <div class="project-item col-sm-3">
-      <div class="project-item-top"><img class="responsive outline" src="../images/quantcast/3.png"></div>
+      <div class="project-item-top"><img class="responsive outline" src="../images/quantcast/4.png"></div>
       <h5>Analytics</h5>
       <p>Data visualizations help publishers understand their user base.</p>
     </div>
@@ -190,9 +147,7 @@
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>The design before I came to Quantcast was years old and cobbled together. The site had a large unwieldy navigation that changed from page to page and required a lot of reading. The home page had a lot of reading as well and included buzzy words that were hard to understand. The product had a cluttered feel with lots of outlines and tiny text. The entire site required the user to do a lot of reading.</p>
-      <p>Beyond the design, there was a lack of understanding of who the product served and how it was being used.</p>
-      <p>Because the site was created over the course of years, it contained a great deal of legacy code that made small changes very difficult. A sweeping site design could not happen without massive interruptions.</p>
+      <p>Web publishers reported that the design of Quantcast's product was complicated looking. They felt lost in many layers of navigation and felt like they couldn't find their favorite features without having to click several times. They wanted an easier way to use the data provided to back up their story to advertisers and set themselves up for new opportunities.</p>
     </div>
   </div>
 </div>
@@ -202,18 +157,30 @@
     <div class="body-left col-sm-4">
       <div class="body-title">
         <h3>new design</h3>
-        <h4>solutions</h4>
+        <h4>resolutions</h4>
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>To ease the product into a redesign, I started by simplifying the navigation and created a wrapper to replace the dated menus. I replaced the wordy home page with one that was direct and easy to read. After this launched we began the product redesign process.</p>
-      <p>It was imperative to truly understand who was using the site and how it was being used. I partnered with a user researcher to tackle this and we did in depth interviews with dozens of the top publishers using Quantcast's product. It was through these interviews that we learned that publishers were most interested in using the site for metrics to give to their ad networks, to compare themselves to other sites like them, and to promote themselves to lead to new opportunities.</p>
-      <p>With this information, I redesigned the measure tool to give the publishers easy access to their metrics, to save profiles to compare to their own and to make their own profile show their data in the best possible light.</p>
+      <p>At first it was was unclear how publishers were using Quantcast's product. I partnered with a user researcher to perform in depth interviews with over a dozen publishers using the measure product. We learned that they were most interested in embedding Quantcast charts in reports to advertisers, comparing themselves to their competition, and having a public profile that opens themselves to new opportunities.</p>
+
+
+      <p>I started by simplifying the navigation and created a wrapper that would ease Quantcast into the redesign. I created a home page that was direct and easy to read. After this launched we began the product redesign process.</p>
+      <img class="responsive" style="margin:20px 0 60px 0; border: 1px solid #cfcfcf;" src="../images/quantcast/1.png">
+
+      <p>I redesigned the measure tool to give the publishers quick and easy access to their metrics and an ability to hide parts of their data in their profile to show themselves in the best possible light.</p>
+      <img class="responsive" style="margin:20px 0 60px 0; border: 1px solid #cfcfcf;" src="../images/quantcast/12.png">
+
+      <p>Because comparisons were important, I designed an area where publishers could save favorites, categorize them and create comparison charts.</p>
+      <img class="responsive" style="margin:20px 0 60px 0; border: 1px solid #cfcfcf;" src="../images/quantcast/10.png">
+
+      <p>Each data visualization was customized for clarity and purpose.</p>
+      <img class="responsive" style="margin:20px 0 60px 0;" src="../images/quantcast/4.png">
+
     </div>
   </div>
 </div>
 
-<div class="details container">
+<!--<div class="details container">
   <div class="row">
     <div class="col-sm-12">
       <h4 class="details-title">Details</h4>
@@ -248,7 +215,7 @@
       </ul>
     </div>
   </div>
-</div>
+</div>-->
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
