--- a/html/coinledger.html
+++ b/html/coinledger.html
@@ -193,14 +193,14 @@
     <div class="body-left col-sm-4">
       <div class="body-title">
         <h3>New design</h3>
-        <h4>resolutions</h4>
+        <h4>solutions</h4>
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>Not being a bitcoin investor myself, I needed to do some research to understand their needs. I first examined how currencies worked so I could understand bitcoin's backstory. I then interviewed an investor and learned that it was difficult to mentally process bitcoin's currency conversion as there are tiny fractions involved ($1 roughly equals 0.0043 bitcoins). It was important to separate the user's portfolio value from bitcoin's trading price. To do this I designed a strong color bar at the top of the product to make the clear separation.</p>
+      <p>Not being a bitcoin investor myself, I needed to do some research to understand their needs. I first examined how currencies worked so I could understand bitcoin's backstory. I then interviewed an investor and learned that it was difficult to mentally process bitcoin's currency conversion as there are tiny fractions involved ($1 roughly equals 0.0043 bitcoins). It was important to separate the user's portfolio value from bitcoin's trading price. To do this I designed a strong color bar at the top of the product to make the separation clear.</p>
       <img class="responsive" style="margin:20px 0 60px 0; border: 1px solid #cfcfcf;" src="../images/coinledger/2.png">
 
-      <p>Bitcoin's price can vary dramatically minute to minute, and investors trading on this fact need to monitor price fluctuations and see trends in where they bought and sold. I designed a dropdown area where investors could access this information.</p>
+      <p>Bitcoin's price can vary dramatically minute to minute, and investors trading on this fact need to monitor price fluctuations and see trends at where they bought and sold. I designed a dropdown area where investors could access this information.</p>
       <img class="responsive" style="margin-bottom:60px; border: 1px solid #cfcfcf;" src="../images/coinledger/3.png">
 
       <p>For the ledger, I interviewed an investor to determine the actions and categories that would be important to them. I designed a color coding system to tag transactions for ease of browsing.</p>
