--- a/html/quantcast.html
+++ b/html/quantcast.html
@@ -157,7 +157,7 @@
     <div class="body-left col-sm-4">
       <div class="body-title">
         <h3>new design</h3>
-        <h4>resolutions</h4>
+        <h4>solutions</h4>
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
