rare lead updates

--- a/html/quantcast.html
+++ b/html/quantcast.html
@@ -161,13 +161,13 @@
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>At first it was was unclear how publishers were using Quantcast's product. I partnered with a user researcher to perform in depth interviews with over a dozen publishers using the measure product. We learned that they were most interested in embedding Quantcast charts in reports to advertisers, comparing themselves to their competition, and having a public profile that opens themselves to new opportunities.</p>
+      <p>At first it was was unclear how publishers were using Quantcast's product. I partnered with a user researcher and performed in depth interviews with over a dozen publishers using the measure product. We learned that they were most interested in embedding Quantcast charts in reports to advertisers, comparing themselves to their competition, and having a public profile that opens themselves up to new opportunities.</p>
 
 
       <p>I started by simplifying the navigation and created a wrapper that would ease Quantcast into the redesign. I created a home page that was direct and easy to read. After this launched we began the product redesign process.</p>
       <img class="responsive" style="margin:20px 0 60px 0; border: 1px solid #cfcfcf;" src="../images/quantcast/1.png">
 
-      <p>I redesigned the measure tool to give the publishers quick and easy access to their metrics and an ability to hide parts of their data in their profile to show themselves in the best possible light.</p>
+      <p>I redesigned the measure tool to give the publishers quick and easy access to their metrics and an ability to control the presentation of their data in their profile so they could show themselves in the best possible light.</p>
       <img class="responsive" style="margin:20px 0 60px 0; border: 1px solid #cfcfcf;" src="../images/quantcast/12.png">
 
       <p>Because comparisons were important, I designed an area where publishers could save favorites, categorize them and create comparison charts.</p>
