--- a/html/rarelead.html
+++ b/html/rarelead.html
@@ -39,31 +39,8 @@
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>the project</h4>
             <hr>
-            <p>This project was a sketch to test out the concept of a &lsquo;Tinder for jobs&rsquo;. The first task was to decide on a name and pull together a logo, which would give us a starting point for the design.</p>
+            <p>This project was a sketch to test the concept of a &lsquo;Tinder for jobs&rsquo;. The first task was to decide on a name and pull together a logo.</p>
             <p>The name and logo are designed to evoke trust and hint at exclusivity.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/rarelead/screens/1.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>the app : home</h4>
-            <hr>
-            <p>The app is designed for the job seeker needing a low friction, discrete way of showing interest in new opportunities.
-            Upon sign up the user enters the url of their Linkedin profile, which allows the app to scan keywords from their profile to pre-qualify them for posted jobs. </p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/rarelead/screens/3.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>preferences</h4>
-            <hr>
-            <p>The seeker sets their preferences to filter their mandatory requirements like team size, commute time, company type and perks.</p>
           </div>
         </div>
 
@@ -72,110 +49,31 @@
             <img class="responsive" src="../images/rarelead/screens/4.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>posted job</h4>
+            <h4>app</h4>
             <hr>
-            <p>The user can then browse positions that are a match for them. A short, tidy overview area keeps descriptions succinct. </p>
+            <p>The app is designed to give a job seeker a quick and easy way to express interest in a job. The user is only shown jobs they are qualified for.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/rarelead/screens/5.png">
+            <img class="responsive" src="../images/rarelead/screens/9.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>swiping up </h4>
+            <h4>app</h4>
             <hr>
-            <p>Swiping up gives more details of the team and office location. </p>
-            <p>Instead of responsibilites, projects are listed to give the seeker an exact idea of what they would be doing.</p>
+            <p>Each job has a different picture and color for differentiation.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/rarelead/screens/6.png">
+            <img class="responsive" src="../images/rarelead/screens/3.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>company info, perks</h4>
+            <h4>filters</h4>
             <hr>
-           <p>Financial information and leadership links allow the user to browse deeper if they'd like to know more about the company.</p>
-           <p>Perks include the must-haves already selected by the seeker in preferences.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/rarelead/1-1.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>the site</h4>
-            <hr>
-            <p>Recruiters do much of the work at their desks. Therefore, the MVP would focus only on a desktop site where the recruiter would create their postings and manage communication with interested candidates.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/rarelead/2-1.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>the site : add job</h4>
-            <hr>
-            <p>The flow for adding a posting to the system.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/rarelead/3-1.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>step 2, add projects</h4>
-            <hr>
-            <p>The flow for adding a posting to the system.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/rarelead/4-1.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>step 3, company info</h4>
-            <hr>
-            <p>The flow for adding a posting to the system.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/rarelead/5-1.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>step 4, perks</h4>
-            <hr>
-            <p>The flow for adding a posting to the system.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/rarelead/6-1.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>step 5, keywords</h4>
-            <hr>
-            <p>The flow for adding a posting to the system.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/rarelead/7-1.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>success</h4>
-            <hr>
-            <p>Successfully posted jobs populate the home page.</p>
+            <p>The user is able to filter out jobs that do not meet their requirements for commuting, company type and perks.</p>
           </div>
         </div>
 
@@ -184,9 +82,9 @@
             <img class="responsive" src="../images/rarelead/8-1.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>manage postings</h4>
+            <h4>for recruiters</h4>
             <hr>
-            <p>The recruiter is notified when users have expressed interest in their job through clicking in the app.</p>
+            <p>Recruiters do much of the work at their desks. Therefore a desktop site was designed where they could create their postings and manage communication with interested candidates.</p>
           </div>
         </div>
 
@@ -197,40 +95,7 @@
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>new matches</h4>
             <hr>
-            <p>New matches are highlighted, which allow the recruiter to initiate a text conversation...</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/rarelead/10-1.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>new matches : payment</h4>
-            <hr>
-            <p>Which they must pay to do.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/rarelead/11-1.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>texting a candidate</h4>
-            <hr>
-            <p>Upon payment, the recruiter can text candidates from the desktop site.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/rarelead/12-1.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>messages</h4>
-            <hr>
-            <p>The recruiter can manage all of their conversations for a particular job.</p>
+            <p>New matches are highlighted, which allow the recruiter to initiate a text conversation</p>
           </div>
         </div>
 
@@ -299,19 +164,28 @@
   <div class="row">
     <div class="body-left col-sm-4">
       <div class="body-title">
-        <h3>What was the</h3>
-        <h4>solution?</h4>
+        <h3>new design</h3>
+        <h4>solutions</h4>
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>To soften the outreach process for both the job seeker and the recruiter, simplicity and privacy had to be designed into the product. The app would allow a candidate to share their linked in profile page to be automatically qualified. They would browse through jobs with direct, easy to read details and show interest by clicking the checkmark button. They would be contacted only through text and only if they first showed interest.</p>
+      <p>To soften the outreach process for both the job seeker and the recruiter, simplicity and privacy had to be designed into the product. The app would automatically qualify a candidate by parsing their Linkedin profile. A seeker could browse through jobs with direct, easy to read details and show interest by clicking the checkmark button. They would be contacted only through text and only if they showed interest first .</p>
+      <img class="responsive" style="margin:20px 0 60px 0; border: 1px solid #cfcfcf;" src="../images/rarelead/screens/4.png">
 
-      <p>The recruiter would have a streamlined process of adding jobs to the system through an easy to use website that guides them into creating an appealing posting with succinct details. They would no longer need to contact potential candidates out of the blue as the system would show only people with real interest.</p>
+
+      <p>The recruiter would have a streamlined process of adding jobs to the system through a website that guides them into creating an appealing posting with succinct details. </p>
+      <img class="responsive" style="margin:20px 0 60px 0; border: 1px solid #cfcfcf;" src="../images/rarelead/8-1.png">
+
+      <p>They would no longer need to contact potential candidates out of the blue as the system would show only people with real interest.</p>
+      <img class="responsive" style="margin:20px 0 60px 0; border: 1px solid #cfcfcf;" src="../images/rarelead/9-1.png">
+
+      <p>A landing page was designed to drum up seeker interest.</p>
+      <img class="responsive" style="margin:20px 0 60px 0; border: 1px solid #cfcfcf;" src="../images/rarelead/16-1.png">
     </div>
   </div>
 </div>
 
-<div class="details container">
+<!--<div class="details container">
   <div class="row">
     <div class="col-sm-12">
       <h4 class="details-title">Details</h4>
@@ -338,7 +212,7 @@
       <p>prototypes</p>
     </div>
   </div>
-</div>
+</div>-->
 
 
 
